--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@ body{
     height: 100%;
 }
 
+#myTable{
+    height: 540px;
+    overflow-y: scroll;
+}
 .baner1{
     height: 780px;
     background-color: rgb(0, 8, 53) !important;
